--- a/configs/config_AD_bastel_2.json
+++ b/configs/config_AD_bastel_2.json
@@ -46,7 +46,7 @@
 "SAMPLES":{
     "hg38": {
         "190722": {
-            "star": ["UU_Library_X12_S47", "UU_Library_X11_S46", "UU_Library_X10_S45", "UU_Library_X09_S44", "UU_Library_X14_S8", "UU_Library_X04_S4", "UU_Library_X03_S3", "UU_Library_X02_S2"]#paired rename _R1_001. _r1. *R1_001.fastq.gz && rename _R2_001. _r2. *R2_001.fastq.gz
+            "star": ["UU_Library_X12_S47", "UU_Library_X11_S46", "UU_Library_X10_S45", "UU_Library_X09_S44", "UU_Library_X14_S8", "UU_Library_X04_S4", "UU_Library_X03_S3", "UU_Library_X02_S2"]
         },
         "260919": {
             "star": ["UU_X15_S201", "UU_X16_S202", "UU_X17_S203", "UU_X18_S204", "UU_X19_S205", "UU_X20_S206", "UU_X21_S207", "UU_X22_S208"]
@@ -481,16 +481,16 @@
 "DE" : {
   "COMPARABLE" :
     {
-      "CTRL_3": "AD_3",
-      "CTRL_5_6": "AD_5_6",
-      "CTRL_white": "AD_white",
-      "CTRL_total": "AD_total"
+      "CTRL_3": ["AD_3","AD_5_6","AD_white","AD_total"],
+      "CTRL_5_6": ["AD_5_6"],
+      "CTRL_white": ["AD_white"],
+      "CTRL_total": ["AD_total"]
     },
       "hg38" : {
           "190722": {
               "star": {
-                  "ENV": "edger",  #see QC
-                  "BIN": "EdgeR.R",
+                  "ENV": "deseq2",
+                  "BIN": "DESeq2_diffexp_2.R",
                   "CONDITION":  ["CTRL_5_6","CTRL_3","CTRL_total","AD_total","CTRL_white","AD_white","AD_5_6","AD_3"],
                   "REPLICATES": ["UU_Library_X12_S47","UU_Library_X11_S46","UU_Library_X10_S45","UU_Library_X09_S44","UU_Library_X14_S8","UU_Library_X04_S4","UU_Library_X03_S3","UU_Library_X02_S2"],
                   "TYPES": ["paired","paired","paired","paired","paired","paired","paired","paired"],
@@ -501,9 +501,8 @@
           },
           "260919": {
               "star": {
-                "ENV": "edger",  #see QC
-                "BIN": "EdgeR.R",
-                  "COMPARABLE" :,
+                "ENV": "deseq2",  #see QC
+                "BIN": "DESeq2_diffexp_2.R",
                   "CONDITION":  ["AD_total","AD_3","AD_5_6","AD_white","CTRL_total","CTRL_3","CTRL_5_6","CTRL_white"],
                   "REPLICATES": ["UU_X15_S201","UU_X16_S202","UU_X17_S203","UU_X18_S204","UU_X19_S205","UU_X20_S206","UU_X21_S207","UU_X22_S208"],
                   "TYPES": ["paired","paired","paired","paired","paired","paired","paired","paired"],
@@ -514,9 +513,8 @@
           },
           "211019": {
               "star": {
-                "ENV": "edger",  #see QC
-                "BIN": "EdgeR.R",
-                  "COMPARABLE" :,
+                "ENV": "deseq2",  #see QC
+                "BIN": "DESeq2_diffexp_2.R",
                   "CONDITION":  ["AD_total","AD_3","AD_5_6","AD_white","CTRL_total","CTRL_3","CTRL_5_6","CTRL_white"],
                   "REPLICATES": ["UU_X23","UU_X24","UU_X25","UU_X26","UU_X27","UU_X28","UU_X29","UU_X30"],
                   "TYPES": ["paired","paired","paired","paired","paired","paired","paired","paired"],
@@ -527,9 +525,8 @@
           },
           "211019_P": {
               "star": {
-                "ENV": "edger",  #see QC
-                "BIN": "EdgeR.R",
-                  "COMPARABLE" :,
+                "ENV": "deseq2",  #see QC
+                "BIN": "DESeq2_diffexp_2.R",
                   "CONDITION":  ["Non_CL_P27","Non_CL_PABP","CL_P27","CL_PABP"],
                   "REPLICATES": ["UU_P05","UU_P06","UU_P07","UU_P08"],
                   "TYPES": ["paired","paired","paired","paired"],
