--- a/envs/edger.yaml
+++ b/envs/edger.yaml
@@ -84,3 +84,5 @@ dependencies:
   - xz=5.2.4=h14c3975_1001
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.4=h3b9ef0a_1
+prefix: /homes/brauerei/robin/miniconda3/envs/edger
+
