sra test running

--- a/envs/sra.yaml
+++ b/envs/sra.yaml
@@ -1,9 +1,43 @@
-name: sratools
+name: sra
 channels:
   - conda-forge
   - bioconda
+  - defaults
   - r
 dependencies:
-  - sra-tools=2.9.1_1
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - hdf5=1.10.5
+  - icu=64.2
+  - libgcc-ng=9.2.0
+  - libgfortran-ng=7.3.0
+  - libgomp=9.2.0
+  - libiconv=1.15
+  - libstdcxx-ng=9.2.0
+  - libxml2=2.9.10
+  - ncbi-ngs-sdk=2.10.4
+  - perl=5.26.2
+  - perl-app-cpanminus=1.7044
+  - perl-business-isbn=3.004
+  - perl-business-isbn-data=20140910.003
+  - perl-carp=1.38
+  - perl-constant=1.33
+  - perl-data-dumper=2.173
+  - perl-encode=2.88
+  - perl-exporter=5.72
+  - perl-extutils-makemaker=7.36
+  - perl-file-path=2.16
+  - perl-file-temp=0.2304
+  - perl-mime-base64=3.15
+  - perl-parent=0.236
+  - perl-uri=1.76
+  - perl-xml-libxml=2.0132
+  - perl-xml-namespacesupport=1.12
+  - perl-xml-sax=1.02
+  - perl-xml-sax-base=1.09
+  - perl-xsloader=0.24
   - pigz=2.3.4
+  - sra-tools=2.10.3
+  - xz=5.2.4
+  - zlib=1.2.11
 
