--- a/envs/snakemake.yaml
+++ b/envs/snakemake.yaml
@@ -9,85 +9,84 @@ dependencies:
   - _openmp_mutex=4.5
   - aioeasywebdav=2.4.0
   - aiohttp=3.6.2
+  - alsa-lib=1.1.5
   - appdirs=1.4.3
-  - arrow=0.15.5
   - async-timeout=3.0.1
   - attrs=19.3.0
   - bcrypt=3.1.7
-  - binaryornot=0.4.4
-  - biopython=1.74
-  - boto3=1.12.0
-  - botocore=1.15.0
+  - biopython=1.76
+  - boto3=1.12.43
+  - botocore=1.15.43
+  - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2019.11.28
+  - ca-certificates=2020.4.5.1
   - cachetools=3.1.1
   - cairo=1.16.0
-  - certifi=2019.11.28
-  - cffi=1.13.2
+  - certifi=2020.4.5.1
+  - cffi=1.14.0
   - chardet=3.0.4
-  - click=7.0
-  - configargparse=1.0
-  - cookiecutter=1.7.0
+  - configargparse=1.2.1
+  - coreutils=8.31
+  - crc32c=2.0
   - cryptography=2.8
-  - datrie=0.8
-  - decorator=4.4.1
+  - curl=7.69.1
+  - datrie=0.8.2
+  - decorator=4.4.2
   - docutils=0.15.2
   - dropbox=9.4.0
   - expat=2.2.9
   - fftw=3.3.8
   - filechunkio=1.8
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=2.001
-  - font-ttf-source-code-pro=2.030
-  - font-ttf-ubuntu=0.83
   - fontconfig=2.13.1
-  - fonts-conda-forge=1
-  - freetype=2.10.0
-  - fribidi=1.0.5
+  - freetype=2.10.1
   - ftputil=3.4
-  - future=0.18.2
-  - gdk-pixbuf=2.38.2
+  - gdk-pixbuf=2.36.12
   - gettext=0.19.8.1
   - ghostscript=9.22
-  - giflib=5.2.1
-  - gitdb2=3.0.2
-  - gitpython=3.0.5
-  - glib=2.58.3
+  - giflib=5.1.7
+  - gitdb=4.0.4
+  - gitpython=3.1.1
+  - glib=2.64.2
   - gobject-introspection=1.58.2
-  - google-api-core=1.16.0
-  - google-auth=1.11.2
+  - google-api-core=1.17.0
+  - google-auth=1.14.0
   - google-cloud-core=1.3.0
-  - google-cloud-storage=1.26.0
+  - google-cloud-storage=1.27.0
   - google-resumable-media=0.5.0
   - googleapis-common-protos=1.51.0
   - graphite2=1.3.13
-  - graphviz=2.42.3
+  - graphviz=2.38.0
   - harfbuzz=2.4.0
   - icu=64.2
-  - idna=2.8
-  - imagemagick=7.0.9_24
-  - importlib_metadata=1.5.0
+  - idna=2.9
+  - imagemagick=7.0.8_54
+  - importlib-metadata=1.6.0
+  - importlib_metadata=1.6.0
   - ipython_genutils=0.2.0
   - jbig=2.1
-  - jinja2=2.11.1
-  - jinja2-time=0.2.0
-  - jmespath=0.9.4
+  - jinja2=2.11.2
+  - jmespath=0.9.5
   - jpeg=9c
   - jsonschema=3.2.0
-  - jupyter_core=4.6.2
+  - jupyter_core=4.6.3
+  - krb5=1.17.1
+  - lcms2=2.9
+  - ld_impl_linux-64=2.34
   - libblas=3.8.0
   - libcblas=3.8.0
   - libcroco=0.6.13
+  - libcurl=7.69.1
+  - libedit=3.1.20170329
   - libffi=3.2.1
   - libgcc-ng=9.2.0
   - libgfortran-ng=7.3.0
-  - libgomp=9.2.0
   - libiconv=1.15
   - liblapack=3.8.0
-  - libopenblas=0.3.7
+  - libopenblas=0.3.9
   - libpng=1.6.37
   - libprotobuf=3.11.4
-  - librsvg=2.46.4
+  - librsvg=2.44.14
+  - libssh2=1.8.2
   - libstdcxx-ng=9.2.0
   - libtiff=4.1.0
   - libtool=2.4.6
@@ -95,63 +94,69 @@ dependencies:
   - libwebp=1.0.2
   - libxcb=1.13
   - libxml2=2.9.10
-  - lz4-c=1.8.3
+  - llvm-openmp=10.0.0
+  - lz4-c=1.9.2
   - markupsafe=1.1.1
-  - multidict=4.7.4
-  - natsort=6.0.0
-  - nbformat=5.0.4
+  - mpi=1.0
+  - mpich=3.3.2
+  - multidict=4.7.5
+  - natsort=7.0.1
+  - nbformat=5.0.6
   - ncurses=6.1
   - networkx=2.4
+  - nextflow=20.01.0
   - numpy=1.18.1
+  - openjdk=11.0.1
   - openjpeg=2.3.1
-  - openssl=1.1.1d
-  - pandas=1.0.1
-  - pango=1.42.4
+  - openssl=1.1.1g
+  - pandas=1.0.3
+  - pango=1.40.14
   - paramiko=2.7.1
   - pcre=8.44
   - perl=5.26.2
   - pip=20.0.2
   - pixman=0.38.0
   - pkg-config=0.29.2
-  - poyo=0.5.0
   - prettytable=0.7.2
   - protobuf=3.11.4
-  - psutil=5.6.7
+  - psutil=5.7.0
   - pthread-stubs=0.4
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.7
-  - pycparser=2.19
-  - pygments=2.5.2
-  - pygraphviz=1.3
+  - pycparser=2.20
+  - pygments=2.6.1
+  - pygraphviz=1.5
   - pynacl=1.3.0
   - pyopenssl=19.1.0
-  - pyrsistent=0.15.7
+  - pyrsistent=0.16.0
   - pysftp=0.2.9
   - pysocks=1.7.1
-  - python=3.7.1
+  - python=3.8.2
   - python-dateutil=2.8.1
   - python-irodsclient=0.8.2
+  - python_abi=3.8
   - pytz=2019.3
-  - pyyaml=5.3
+  - pyyaml=5.3.1
   - ratelimiter=1.2.0
-  - readline=7.0
-  - requests=2.22.0
+  - readline=8.0
+  - requests=2.23.0
   - rsa=4.0
   - s3transfer=0.3.3
-  - setuptools=45.2.0
+  - setuptools=46.1.3
   - six=1.14.0
-  - smmap2=2.0.5
-  - snakemake=5.10.0
-  - snakemake-minimal=5.10.0
-  - sqlite=3.28.0
+  - smmap=3.0.2
+  - snakemake=5.15.0
+  - snakemake-minimal=5.15.0
+  - sqlite=3.30.1
   - tk=8.6.10
   - toposort=1.5
   - traitlets=4.3.3
-  - urllib3=1.25.7
+  - urllib3=1.25.9
   - wheel=0.34.2
-  - whichcraft=0.6.1
-  - wrapt=1.12.0
+  - wrapt=1.12.1
   - xmlrunner=1.7.7
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
@@ -159,16 +164,20 @@ dependencies:
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
   - xorg-libxpm=3.5.13
   - xorg-libxrender=0.9.10
   - xorg-libxt=1.1.5
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
-  - xz=5.2.4
-  - yaml=0.2.2
+  - xz=5.2.5
+  - yaml=0.2.4
   - yarl=1.3.0
-  - zipp=2.2.0
+  - zipp=3.1.0
   - zlib=1.2.11
   - zstd=1.4.4
 
