--- a/envs/nextsnake.yaml
+++ b/envs/nextsnake.yaml
@@ -1,4 +1,4 @@
-name: snakemake
+name: nextsnake
 channels:
   - conda-forge
   - bioconda
@@ -181,5 +181,3 @@ dependencies:
   - zipp=3.1.0
   - zlib=1.2.11
   - zstd=1.4.4
-prefix: /home/fall/anaconda3/envs/snakemake
-
