updated nextsnakes conda base environment

--- a/envs/nextsnake.yaml
+++ b/envs/nextsnake.yaml
@@ -8,137 +8,162 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - aioeasywebdav=2.4.0
-  - aiohttp=3.6.2
+  - aiohttp=3.7.1
   - alabaster=0.7.12
-  - alsa-lib=1.1.5
-  - appdirs=1.4.3
+  - alsa-lib=1.2.3
+  - amply=0.1.4
+  - appdirs=1.4.4
   - async-timeout=3.0.1
-  - attrs=19.3.0
+  - atk=2.36.0
+  - atk-1.0=2.36.0
+  - attrs=20.2.0
   - babel=2.8.0
-  - bcrypt=3.1.7
-  - biopython=1.76
-  - boto3=1.12.49
-  - botocore=1.15.49
+  - bcrypt=3.2.0
+  - biopython=1.78
+  - boto3=1.16.4
+  - botocore=1.19.4
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2020.4.5.1
-  - cachetools=3.1.1
+  - c-ares=1.16.1
+  - ca-certificates=2020.10.14
+  - cachetools=4.1.1
   - cairo=1.16.0
-  - certifi=2020.4.5.1
-  - cffi=1.14.0
+  - certifi=2020.6.20
+  - cffi=1.14.3
   - chardet=3.0.4
+  - coincbc=2.10.5
   - configargparse=1.2.3
-  - coreutils=8.31
-  - crc32c=2.0
-  - cryptography=2.9.2
+  - coreutils=8.32
+  - crc32c=2.2
+  - cryptography=3.1.1
   - curl=7.71.1
   - datrie=0.8.2
   - decorator=4.4.2
-  - docutils=0.15.2
-  - dropbox=9.4.0
-  - expat=2.2.9
+  - docutils=0.16
+  - dropbox=10.6.0
+  - expat=2.2.10
   - fftw=3.3.8
   - filechunkio=1.8
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=2.001
+  - font-ttf-source-code-pro=2.030
+  - font-ttf-ubuntu=0.83
   - fontconfig=2.13.1
-  - freetype=2.10.1
-  - ftputil=3.4
-  - gdk-pixbuf=2.36.12
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - ftputil=4.0.0
+  - gdk-pixbuf=2.38.2
   - gettext=0.19.8.1
-  - ghostscript=9.22
-  - giflib=5.1.7
-  - gitdb=4.0.4
-  - gitpython=3.1.1
-  - glib=2.64.2
-  - gobject-introspection=1.58.2
-  - google-api-core=1.17.0
-  - google-api-python-client=1.9.1
-  - google-auth=1.14.1
-  - google-auth-httplib2=0.0.3
-  - google-cloud-core=1.3.0
-  - google-cloud-storage=1.28.0
-  - google-resumable-media=0.5.0
-  - googleapis-common-protos=1.51.0
-  - graphite2=1.3.13
-  - graphviz=2.38.0
+  - ghostscript=9.53.3
+  - giflib=5.2.1
+  - gitdb=4.0.5
+  - gitpython=3.1.11
+  - glib=2.66.2
+  - gobject-introspection=1.66.1
+  - google-api-core=1.22.4
+  - google-api-python-client=1.12.5
+  - google-auth=1.22.1
+  - google-auth-httplib2=0.0.4
+  - google-cloud-core=1.4.3
+  - google-cloud-storage=1.31.2
+  - google-crc32c=1.0.0
+  - google-resumable-media=1.1.0
+  - googleapis-common-protos=1.52.0
+  - graphite2=1.3.14
+  - graphviz=2.42.3
   - grep=3.4
-  - harfbuzz=2.4.0
+  - grpcio=1.31.0
+  - gtk2=2.24.32
+  - gts=0.7.6
+  - harfbuzz=2.7.2
   - httplib2=0.18.1
-  - icu=64.2
-  - idna=2.9
-  - imagemagick=7.0.8_54
+  - icu=67.1
+  - idna=2.10
+  - imagemagick=7.0.10_28
   - imagesize=1.2.0
-  - importlib-metadata=1.6.0
-  - importlib_metadata=1.6.0
+  - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
   - ipython_genutils=0.2.0
   - jbig=2.1
   - jinja2=2.11.2
-  - jmespath=0.9.5
-  - jpeg=9c
+  - jmespath=0.10.0
+  - jpeg=9d
   - jsonschema=3.2.0
   - jupyter_core=4.6.3
   - krb5=1.17.1
-  - lcms2=2.9
-  - ld_impl_linux-64=2.34
-  - libblas=3.8.0
-  - libcblas=3.8.0
+  - lcms2=2.11
+  - ld_impl_linux-64=2.35
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libcrc32c=1.1.1
   - libcroco=0.6.13
   - libcurl=7.71.1
-  - libedit=3.1.20170329
+  - libedit=3.1.20191231
+  - libev=4.33
   - libffi=3.2.1
-  - libgcc-ng=9.2.0
-  - libgfortran-ng=7.3.0
-  - libiconv=1.15
-  - liblapack=3.8.0
-  - libopenblas=0.3.9
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
+  - libglib=2.66.2
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libnghttp2=1.41.0
+  - libopenblas=0.3.12
   - libpng=1.6.37
-  - libprotobuf=3.11.4
-  - librsvg=2.44.14
+  - libprotobuf=3.13.0.1
+  - librsvg=2.50.1
+  - libsodium=1.0.18
   - libssh2=1.9.0
-  - libstdcxx-ng=9.2.0
+  - libstdcxx-ng=9.3.0
   - libtiff=4.1.0
   - libtool=2.4.6
   - libuuid=2.32.1
-  - libwebp=1.0.2
-  - libxcb=1.13
+  - libwebp=1.1.0
+  - libwebp-base=1.1.0
+  - libxcb=1.14
   - libxml2=2.9.10
-  - llvm-openmp=10.0.0
+  - llvm-openmp=11.0.0
   - lz4-c=1.9.2
   - markupsafe=1.1.1
   - mpi=1.0
   - mpich=3.3.2
-  - multidict=4.7.5
+  - multidict=4.7.6
   - natsort=7.0.1
-  - nbformat=5.0.6
-  - ncurses=6.1
-  - networkx=2.4
-  - nextflow=20.04.1
-  - numpy=1.18.1
+  - nbformat=5.0.8
+  - ncurses=6.2
+  - networkx=2.5
+  - nextflow=20.07.1
+  - numpy=1.19.2
   - oauth2client=4.1.3
-  - openjdk=11.0.1
+  - openjdk=11.0.8
   - openjpeg=2.3.1
-  - openssl=1.1.1g
+  - openssl=1.1.1h
   - packaging=20.4
-  - pandas=1.0.3
-  - pango=1.40.14
-  - paramiko=2.7.1
+  - pandas=1.1.3
+  - pango=1.42.4
+  - paramiko=2.7.2
   - pcre=8.44
   - perl=5.26.2
-  - pip=20.1.1
+  - pip=20.2.4
   - pixman=0.38.0
   - pkg-config=0.29.2
   - prettytable=0.7.2
-  - protobuf=3.11.4
-  - psutil=5.7.0
+  - protobuf=3.13.0.1
+  - psutil=5.7.3
   - pthread-stubs=0.4
+  - pulp=2.3.1
   - pyasn1=0.4.8
-  - pyasn1-modules=0.2.7
+  - pyasn1-modules=0.2.8
   - pycparser=2.20
-  - pygments=2.6.1
-  - pygraphviz=1.5
-  - pynacl=1.3.0
+  - pygments=2.7.2
+  - pygraphviz=1.6
+  - pynacl=1.4.0
   - pyopenssl=19.1.0
   - pyparsing=2.4.7
-  - pyrsistent=0.16.0
+  - pyrsistent=0.17.3
   - pysftp=0.2.9
   - pysocks=1.7.1
   - python=3.8.4
@@ -149,18 +174,18 @@ dependencies:
   - pyyaml=5.3.1
   - ratelimiter=1.2.0
   - readline=8.0
-  - requests=2.23.0
-  - rsa=4.0
+  - requests=2.24.0
+  - rsa=4.6
   - s3transfer=0.3.3
-  - setuptools=46.1.3
+  - setuptools=50.3.0
   - simplejson=3.17.2
-  - six=1.14.0
+  - six=1.15.0
   - slacker=0.14.0
-  - smmap=3.0.2
-  - snakemake=5.20.1
-  - snakemake-minimal=5.20.1
+  - smmap=3.0.4
+  - snakemake=5.26.1
+  - snakemake-minimal=5.26.1
   - snowballstemmer=2.0.0
-  - sphinx=3.1.2
+  - sphinx=3.2.1
   - sphinx_rtd_theme=0.5.0
   - sphinxcontrib-applehelp=1.0.2
   - sphinxcontrib-devhelp=1.0.2
@@ -168,13 +193,15 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1
   - sphinxcontrib-qthelp=1.0.3
   - sphinxcontrib-serializinghtml=1.1.4
-  - sqlite=3.32.3
+  - sqlite=3.33.0
   - tk=8.6.10
   - toposort=1.5
-  - traitlets=4.3.3
+  - traitlets=5.0.5
+  - typing-extensions=3.7.4.3
+  - typing_extensions=3.7.4.3
   - uritemplate=3.0.1
-  - urllib3=1.25.9
-  - wheel=0.34.2
+  - urllib3=1.25.11
+  - wheel=0.35.1
   - wrapt=1.12.1
   - xmlrunner=1.7.7
   - xorg-fixesproto=5.0
@@ -182,7 +209,7 @@ dependencies:
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
-  - xorg-libx11=1.6.9
+  - xorg-libx11=1.6.12
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
@@ -197,10 +224,8 @@ dependencies:
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.5
-  - yaml=0.2.4
-  - yarl=1.3.0
-  - zipp=3.1.0
+  - yaml=0.2.5
+  - yarl=1.6.2
+  - zipp=3.4.0
   - zlib=1.2.11
-  - zstd=1.4.4
-prefix: /home/fall/anaconda3/envs/nextsnakes
-
+  - zstd=1.4.5
