--- a/envs/qc.yaml
+++ b/envs/qc.yaml
@@ -3,6 +3,114 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
-  - fastqc=0.11.8
-  - multiqc=1.8
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - alsa-lib=1.2.3
+  - brotlipy=0.7.0
+  - ca-certificates=2020.6.20
+  - cairo=1.16.0
+  - certifi=2020.6.20
+  - cffi=1.14.3
+  - chardet=3.0.4
+  - click=7.1.2
+  - coloredlogs=14.0
+  - colormath=3.0.0
+  - cryptography=3.2
+  - cycler=0.10.0
+  - decorator=4.4.2
+  - fastqc=0.11.9
+  - font-ttf-dejavu-sans-mono=2.37
+  - fontconfig=2.13.1
+  - freetype=2.10.4
+  - future=0.18.2
+  - gettext=0.19.8.1
+  - giflib=5.2.1
+  - graphite2=1.3.13
+  - harfbuzz=2.7.2
+  - humanfriendly=8.2
+  - icu=67.1
+  - idna=2.10
+  - importlib-metadata=2.0.0
+  - jinja2=2.11.2
+  - jpeg=9d
+  - kiwisolver=1.3.0
+  - lcms2=2.11
+  - ld_impl_linux-64=2.35
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libffi=3.2.1
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=7.5.0
+  - libgfortran4=7.5.0
+  - libglib=2.66.2
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libopenblas=0.3.12
+  - libpng=1.6.37
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.1.0
+  - libuuid=2.32.1
+  - libwebp-base=1.1.0
+  - libxcb=1.13
+  - libxml2=2.9.10
+  - lz4-c=1.9.2
+  - lzstring=1.0.4
+  - markdown=3.3.3
+  - markupsafe=1.1.1
+  - matplotlib-base=2.2.5
+  - multiqc=1.9
+  - ncurses=6.2
+  - networkx=2.2
+  - numpy=1.19.2
+  - openjdk=11.0.8
+  - openssl=1.1.1h
+  - pcre=8.44
+  - perl=5.30.3
+  - pixman=0.38.0
+  - pthread-stubs=0.4
+  - pycparser=2.20
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.7
+  - pysocks=1.7.1
+  - python=3.9.0
+  - python-dateutil=2.8.1
+  - python_abi=3.9
+  - pytz=2020.1
+  - pyyaml=5.3.1
+  - readline=8.0
+  - requests=2.24.0
+  - setuptools=49.6.0
+  - simplejson=3.17.2
+  - six=1.15.0
+  - spectra=0.0.11
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - tornado=6.0.4
+  - tzdata=2020d
+  - urllib3=1.25.11
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.12
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
+  - xorg-libxrender=0.9.10
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zipp=3.4.0
+  - zlib=1.2.11
+  - zstd=1.4.5
+prefix: /home/fall/anaconda3/envs/qc
