qc env downgraded to python3.8.6 due to frations.gdc support drop in python 3.9

--- a/envs/qc.yaml
+++ b/envs/qc.yaml
@@ -17,7 +17,7 @@ dependencies:
   - click=7.1.2
   - coloredlogs=14.0
   - colormath=3.0.0
-  - cryptography=3.2
+  - cryptography=3.2.1
   - cycler=0.10.0
   - decorator=4.4.2
   - fastqc=0.11.9
@@ -35,7 +35,7 @@ dependencies:
   - importlib-metadata=2.0.0
   - jinja2=2.11.2
   - jpeg=9d
-  - kiwisolver=1.3.0
+  - kiwisolver=1.3.1
   - lcms2=2.11
   - ld_impl_linux-64=2.35
   - libblas=3.9.0
@@ -60,35 +60,37 @@ dependencies:
   - lzstring=1.0.4
   - markdown=3.3.3
   - markupsafe=1.1.1
-  - matplotlib-base=2.2.5
+  - matplotlib-base=3.3.2
   - multiqc=1.9
   - ncurses=6.2
   - networkx=2.2
-  - numpy=1.19.2
+  - numpy=1.19.4
+  - olefile=0.46
   - openjdk=11.0.8
   - openssl=1.1.1h
   - pcre=8.44
   - perl=5.30.3
+  - pillow=8.0.1
   - pixman=0.38.0
   - pthread-stubs=0.4
   - pycparser=2.20
   - pyopenssl=19.1.0
   - pyparsing=2.4.7
   - pysocks=1.7.1
-  - python=3.9.0
+  - python=3.8.6
   - python-dateutil=2.8.1
-  - python_abi=3.9
+  - python_abi=3.8
   - pytz=2020.1
   - pyyaml=5.3.1
   - readline=8.0
   - requests=2.24.0
-  - setuptools=49.6.0
+  - setuptools=50.3.0
   - simplejson=3.17.2
   - six=1.15.0
   - spectra=0.0.11
   - sqlite=3.33.0
   - tk=8.6.10
-  - tornado=6.0.4
+  - tornado=6.1
   - tzdata=2020d
   - urllib3=1.25.11
   - xorg-fixesproto=5.0
@@ -113,4 +115,3 @@ dependencies:
   - zipp=3.4.0
   - zlib=1.2.11
   - zstd=1.4.5
-prefix: /home/fall/anaconda3/envs/qc
