--- a/envs/hisat2.yaml
+++ b/envs/hisat2.yaml
@@ -8,23 +8,24 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - ca-certificates=2019.11.28
-  - certifi=2019.11.28
-  - hisat2=2.2.0
+  - certifi=2020.6.20
+  - hisat2=2.2.1
   - ld_impl_linux-64=2.33.1
   - libffi=3.2.1
   - libgcc-ng=9.2.0
   - libgomp=9.2.0
   - libstdcxx-ng=9.2.0
-  - ncurses=6.1
-  - openssl=1.1.1d
+  - ncurses=6.2
+  - openssl=1.1.1h
   - perl=5.26.2
   - pip=20.0.2
-  - python=3.7.6
-  - python_abi=3.7
+  - python=3.9.0
+  - python_abi=3.9
   - readline=8.0
-  - setuptools=46.0.0
-  - sqlite=3.30.1
+  - setuptools=50.3.1
+  - sqlite=3.33.0
   - tk=8.6.10
+  - tzdata=2020d
   - wheel=0.34.2
-  - xz=5.2.4
+  - xz=5.2.5
   - zlib=1.2.11
