--- a/envs/nextsnake.yaml
+++ b/envs/nextsnake.yaml
@@ -8,7 +8,7 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - aioeasywebdav=2.4.0
-  - aiohttp=3.7.1
+  - aiohttp=3.7.3
   - alabaster=0.7.12
   - alsa-lib=1.2.3
   - amply=0.1.4
@@ -16,31 +16,33 @@ dependencies:
   - async-timeout=3.0.1
   - atk=2.36.0
   - atk-1.0=2.36.0
-  - attrs=20.2.0
-  - babel=2.8.0
+  - attrs=20.3.0
+  - babel=2.9.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.1
   - bcrypt=3.2.0
   - biopython=1.78
-  - boto3=1.16.4
-  - botocore=1.19.4
+  - boto3=1.16.25
+  - botocore=1.19.25
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - c-ares=1.16.1
-  - ca-certificates=2020.10.14
+  - c-ares=1.17.1
+  - ca-certificates=2020.11.8
   - cachetools=4.1.1
   - cairo=1.16.0
-  - certifi=2020.6.20
-  - cffi=1.14.3
+  - certifi=2020.11.8
+  - cffi=1.14.4
   - chardet=3.0.4
   - coincbc=2.10.5
   - configargparse=1.2.3
   - coreutils=8.32
   - crc32c=2.2
-  - cryptography=3.1.1
+  - cryptography=3.2.1
   - curl=7.71.1
   - datrie=0.8.2
   - decorator=4.4.2
   - docutils=0.16
-  - dropbox=10.6.0
+  - dropbox=10.10.0
   - expat=2.2.10
   - fftw=3.3.8
   - filechunkio=1.8
@@ -54,17 +56,17 @@ dependencies:
   - freetype=2.10.4
   - fribidi=1.0.10
   - ftputil=4.0.0
-  - gdk-pixbuf=2.38.2
+  - gdk-pixbuf=2.42.0
   - gettext=0.19.8.1
   - ghostscript=9.53.3
   - giflib=5.2.1
   - gitdb=4.0.5
   - gitpython=3.1.11
-  - glib=2.66.2
+  - glib=2.66.3
   - gobject-introspection=1.66.1
   - google-api-core=1.22.4
-  - google-api-python-client=1.12.5
-  - google-auth=1.22.1
+  - google-api-python-client=1.12.8
+  - google-auth=1.23.0
   - google-auth-httplib2=0.0.4
   - google-cloud-core=1.4.3
   - google-cloud-storage=1.31.2
@@ -74,7 +76,7 @@ dependencies:
   - graphite2=1.3.14
   - graphviz=2.42.3
   - grep=3.4
-  - grpcio=1.31.0
+  - grpcio=1.33.2
   - gtk2=2.24.32
   - gts=0.7.6
   - harfbuzz=2.7.2
@@ -83,18 +85,18 @@ dependencies:
   - idna=2.10
   - imagemagick=7.0.10_28
   - imagesize=1.2.0
-  - importlib-metadata=2.0.0
-  - importlib_metadata=2.0.0
+  - importlib-metadata=3.1.0
+  - importlib_metadata=3.1.0
   - ipython_genutils=0.2.0
   - jbig=2.1
   - jinja2=2.11.2
   - jmespath=0.10.0
   - jpeg=9d
   - jsonschema=3.2.0
-  - jupyter_core=4.6.3
-  - krb5=1.17.1
+  - jupyter_core=4.7.0
+  - krb5=1.17.2
   - lcms2=2.11
-  - ld_impl_linux-64=2.35
+  - ld_impl_linux-64=2.35.1
   - libblas=3.9.0
   - libcblas=3.9.0
   - libcrc32c=1.1.1
@@ -106,7 +108,7 @@ dependencies:
   - libgcc-ng=9.3.0
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
-  - libglib=2.66.2
+  - libglib=2.66.3
   - libgomp=9.3.0
   - libiconv=1.16
   - liblapack=3.9.0
@@ -114,7 +116,7 @@ dependencies:
   - libopenblas=0.3.12
   - libpng=1.6.37
   - libprotobuf=3.13.0.1
-  - librsvg=2.50.1
+  - librsvg=2.50.2
   - libsodium=1.0.18
   - libssh2=1.9.0
   - libstdcxx-ng=9.3.0
@@ -130,19 +132,19 @@ dependencies:
   - markupsafe=1.1.1
   - mpi=1.0
   - mpich=3.3.2
-  - multidict=4.7.6
-  - natsort=7.0.1
+  - multidict=5.0.2
+  - natsort=7.1.0
   - nbformat=5.0.8
   - ncurses=6.2
   - networkx=2.5
-  - nextflow=20.07.1
-  - numpy=1.19.2
+  - nextflow=20.10.0
+  - numpy=1.19.4
   - oauth2client=4.1.3
   - openjdk=11.0.8
   - openjpeg=2.3.1
   - openssl=1.1.1h
   - packaging=20.4
-  - pandas=1.1.3
+  - pandas=1.1.4
   - pango=1.42.4
   - paramiko=2.7.2
   - pcre=8.44
@@ -150,7 +152,7 @@ dependencies:
   - pip=20.2.4
   - pixman=0.38.0
   - pkg-config=0.29.2
-  - prettytable=0.7.2
+  - prettytable=2.0.0
   - protobuf=3.13.0.1
   - psutil=5.7.3
   - pthread-stubs=0.4
@@ -170,22 +172,22 @@ dependencies:
   - python-dateutil=2.8.1
   - python-irodsclient=0.8.2
   - python_abi=3.8
-  - pytz=2020.1
+  - pytz=2020.4
   - pyyaml=5.3.1
   - ratelimiter=1.2.0
   - readline=8.0
-  - requests=2.24.0
+  - requests=2.25.0
   - rsa=4.6
   - s3transfer=0.3.3
-  - setuptools=50.3.0
+  - setuptools=50.3.1
   - simplejson=3.17.2
   - six=1.15.0
   - slacker=0.14.0
   - smmap=3.0.4
-  - snakemake=5.26.1
-  - snakemake-minimal=5.26.1
+  - snakemake=5.30.1
+  - snakemake-minimal=5.30.1
   - snowballstemmer=2.0.0
-  - sphinx=3.2.1
+  - sphinx=3.3.1
   - sphinx_rtd_theme=0.5.0
   - sphinxcontrib-applehelp=1.0.2
   - sphinxcontrib-devhelp=1.0.2
@@ -201,6 +203,7 @@ dependencies:
   - typing_extensions=3.7.4.3
   - uritemplate=3.0.1
   - urllib3=1.25.11
+  - wcwidth=0.2.5
   - wheel=0.35.1
   - wrapt=1.12.1
   - xmlrunner=1.7.7
@@ -225,7 +228,7 @@ dependencies:
   - xorg-xproto=7.0.31
   - xz=5.2.5
   - yaml=0.2.5
-  - yarl=1.6.2
+  - yarl=1.6.3
   - zipp=3.4.0
   - zlib=1.2.11
   - zstd=1.4.5
