--- a/envs/summary.yaml
+++ b/envs/summary.yaml
@@ -1,4 +1,4 @@
-name: rmarkdown
+name: Renv
 channels:
   - conda-forge
   - bioconda
@@ -9,84 +9,245 @@ dependencies:
   - _r-mutex=1.0.1=anacondar_1
   - binutils_impl_linux-64=2.35.1=h17ad2fc_0
   - binutils_linux-64=2.35=hc3fd857_29
+  - bioconductor-annotate=1.68.0=r40_0
+  - bioconductor-annotationdbi=1.52.0=r40_0
+  - bioconductor-biobase=2.50.0=r40h037d062_0
+  - bioconductor-biocfilecache=1.14.0=r40_0
+  - bioconductor-biocgenerics=0.36.0=r40_0
+  - bioconductor-biocparallel=1.24.0=r40h5f743cb_0
+  - bioconductor-biomart=2.46.0=r40_0
+  - bioconductor-biostrings=2.58.0=r40h037d062_0
+  - bioconductor-delayedarray=0.16.0=r40h037d062_0
+  - bioconductor-deseq2=1.30.0=r40h5f743cb_0
+  - bioconductor-dexseq=1.36.0=r40_0
+  - bioconductor-drimseq=1.18.0=r40_0
+  - bioconductor-edger=3.32.0=r40h5f743cb_0
+  - bioconductor-genefilter=1.72.0=r40hc6cf775_0
+  - bioconductor-geneplotter=1.68.0=r40_0
+  - bioconductor-genomeinfodb=1.26.0=r40_0
+  - bioconductor-genomeinfodbdata=1.2.4=r40_0
+  - bioconductor-genomicalignments=1.26.0=r40h037d062_0
+  - bioconductor-genomicfeatures=1.42.0=r40_0
+  - bioconductor-genomicranges=1.42.0=r40h037d062_0
+  - bioconductor-iranges=2.24.0=r40h037d062_0
+  - bioconductor-limma=3.46.0=r40h037d062_0
+  - bioconductor-matrixgenerics=1.2.0=r40_0
+  - bioconductor-rhtslib=1.22.0=r40h037d062_0
+  - bioconductor-rsamtools=2.6.0=r40h5f743cb_0
+  - bioconductor-rtracklayer=1.50.0=r40h9bb0e53_1
+  - bioconductor-s4vectors=0.28.0=r40h037d062_0
+  - bioconductor-stager=1.12.0=r40_0
+  - bioconductor-summarizedexperiment=1.20.0=r40_0
+  - bioconductor-tximport=1.18.0=r40_0
+  - bioconductor-xvector=0.30.0=r40h037d062_0
+  - bioconductor-zlibbioc=1.36.0=r40h037d062_0
   - bwidget=1.9.14=ha770c72_0
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.17.1=h36c2ea0_0
+  - bzip2=1.0.8=h516909a_3
+  - c-ares=1.16.1=h516909a_3
   - ca-certificates=2020.12.5=ha878542_0
   - cairo=1.16.0=h9f066cc_1006
   - curl=7.71.1=he644dc0_8
   - fontconfig=2.13.1=h7e3eb15_1002
   - freetype=2.10.4=h7ca028e_0
   - fribidi=1.0.10=h36c2ea0_0
-  - gcc_impl_linux-64=9.3.0=h28f5a38_17
-  - gcc_linux-64=9.3.0=h7247604_29
-  - gettext=0.19.8.1=h0b5b191_1005
-  - gfortran_impl_linux-64=9.3.0=h2bb4189_17
-  - gfortran_linux-64=9.3.0=ha1c937c_29
+  - gcc_impl_linux-64=7.5.0=hda68d29_13
+  - gcc_linux-64=7.5.0=he2a3fca_29
+  - gettext=0.19.8.1=hf34092f_1004
+  - gfortran_impl_linux-64=7.5.0=hfca37b7_17
+  - gfortran_linux-64=7.5.0=ha081f1e_29
   - graphite2=1.3.13=h58526e2_1001
-  - gsl=2.6=he838d99_1
-  - gxx_impl_linux-64=9.3.0=h53cdd4c_17
-  - gxx_linux-64=9.3.0=h0d07fa4_29
+  - gsl=2.6=hf94e986_0
+  - gxx_impl_linux-64=7.5.0=h64c220c_13
+  - gxx_linux-64=7.5.0=h547f3ba_29
   - harfbuzz=2.7.2=ha5b49bf_1
   - icu=67.1=he1b5a44_0
   - jpeg=9d=h36c2ea0_0
   - kernel-headers_linux-64=2.6.32=h77966d4_13
   - krb5=1.17.2=h926e7f8_0
   - ld_impl_linux-64=2.35.1=hed1e6ac_0
-  - libblas=3.9.0=3_openblas
-  - libcblas=3.9.0=3_openblas
+  - libblas=3.8.0=17_openblas
+  - libcblas=3.8.0=17_openblas
   - libcurl=7.71.1=hcdd3856_8
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
-  - libffi=3.3=h58526e2_2
+  - libffi=3.2.1=he1b5a44_1007
   - libgcc-devel_linux-64=9.3.0=hfd08b2a_17
   - libgcc-ng=9.3.0=h5dbcf3e_17
-  - libgfortran-ng=9.3.0=he4bcb1c_17
-  - libgfortran5=9.3.0=he4bcb1c_17
-  - libglib=2.66.3=h1f3bc88_1
+  - libgfortran-ng=7.5.0=hae1eefd_17
+  - libgfortran4=7.5.0=hae1eefd_17
+  - libglib=2.66.2=hbe7bbb4_0
   - libgomp=9.3.0=h5dbcf3e_17
   - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=3_openblas
+  - liblapack=3.8.0=17_openblas
   - libnghttp2=1.41.0=h8cfc5f6_2
-  - libopenblas=0.3.12=pthreads_h4812303_1
+  - libopenblas=0.3.10=h5a2b251_0
   - libpng=1.6.37=h21135ba_2
   - libssh2=1.9.0=hab1572f_5
   - libstdcxx-devel_linux-64=9.3.0=h4084dd6_17
   - libstdcxx-ng=9.3.0=h2ae2ef3_17
   - libtiff=4.1.0=h4f3a223_6
-  - libuuid=2.32.1=h7f98852_1000
+  - libuuid=2.32.1=h14c3975_1000
   - libwebp-base=1.1.0=h36c2ea0_3
   - libxcb=1.13=h14c3975_1002
   - libxml2=2.9.10=h68273f3_2
   - lz4-c=1.9.2=he1b5a44_3
   - make=4.3=hd18ef5c_1
   - ncurses=6.2=h58526e2_4
-  - openssl=1.1.1h=h516909a_0
+  - openssl=1.1.1i=h7f98852_0
   - pandoc=2.11.2=h36c2ea0_0
-  - pango=1.42.4=h69149e4_5
+  - pango=1.42.4=h80147aa_5
   - pcre=8.44=he1b5a44_0
-  - pcre2=10.36=h032f7d1_0
+  - pcre2=10.35=h279444b_1
   - pixman=0.40.0=h36c2ea0_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - r-base=4.0.3=ha43b4e8_3
+  - pthread-stubs=0.4=h14c3975_1001
+  - r-askpass=1.1=r40hcdcec82_2
+  - r-assertthat=0.2.1=r40h6115d3f_2
+  - r-backports=1.2.0=r40h9e2df91_0
   - r-base64enc=0.1_3=r40hcdcec82_1004
+  - r-bh=1.72.0_3=r40h6115d3f_1
+  - r-bit=4.0.4=r40hcdcec82_0
+  - r-bit64=4.0.5=r40hcdcec82_0
+  - r-bitops=1.0_6=r40hcdcec82_1004
+  - r-blob=1.2.1=r40h6115d3f_1
+  - r-bookdown=0.21=r40h142f84f_0
+  - r-brio=1.1.0=r40h9e2df91_1
+  - r-broom=0.7.3=r40hc72bb7e_0
+  - r-callr=3.5.1=r40h142f84f_0
+  - r-cellranger=1.1.0=r40h6115d3f_1003
+  - r-class=7.3_17=r40hcdcec82_1
+  - r-classint=0.4_3=r40h31ca83e_2
+  - r-cli=2.1.0=r40h142f84f_0
+  - r-clipr=0.7.1=r40h142f84f_0
+  - r-colorspace=2.0_0=r40h9e2df91_0
+  - r-commonmark=1.7=r40hcdcec82_1002
+  - r-cpp11=0.2.4=r40hc72bb7e_0
+  - r-crayon=1.3.4=r40h6115d3f_1003
+  - r-crosstalk=1.1.0.1=r40h6115d3f_1
+  - r-curl=4.3=r40hcdcec82_1
+  - r-dbi=1.1.0=r40h6115d3f_1
+  - r-dbplyr=2.0.0=r40hc72bb7e_0
+  - r-desc=1.2.0=r40h6115d3f_1003
+  - r-diffobj=0.3.2=r40h9e2df91_1
   - r-digest=0.6.27=r40h1b71b39_0
+  - r-dplyr=1.0.2=r40h0357c0b_0
+  - r-dt=0.17=r40hc72bb7e_0
+  - r-e1071=1.7_4=r40h1b71b39_0
+  - r-ellipsis=0.3.1=r40hcdcec82_0
   - r-evaluate=0.14=r40h6115d3f_2
+  - r-fansi=0.4.1=r40hcdcec82_1
+  - r-farver=2.0.3=r40h0357c0b_1
+  - r-fastmap=1.0.1=r40h0357c0b_1
+  - r-forcats=0.5.0=r40h6115d3f_1
+  - r-formatr=1.7=r40h6115d3f_2
+  - r-fs=1.5.0=r40h0357c0b_0
+  - r-futile.logger=1.4.3=r40h6115d3f_1003
+  - r-futile.options=1.0.1=r40h6115d3f_1002
+  - r-generics=0.1.0=r40hc72bb7e_0
+  - r-ggplot2=3.3.2=r40h6115d3f_0
   - r-glue=1.4.2=r40hcdcec82_0
+  - r-gridextra=2.3=r40h6115d3f_1003
+  - r-gtable=0.3.0=r40h6115d3f_3
+  - r-haven=2.3.1=r40hde08347_0
   - r-highr=0.8=r40h6115d3f_2
+  - r-hms=0.5.3=r40h6115d3f_1
   - r-htmltools=0.5.0=r40h0357c0b_0
-  - r-jsonlite=1.7.2=r40hcfec24a_0
+  - r-htmlwidgets=1.5.3=r40hc72bb7e_0
+  - r-httpuv=1.5.4=r40h0357c0b_0
+  - r-httr=1.4.2=r40h6115d3f_0
+  - r-hwriter=1.3.2=r40h6115d3f_1003
+  - r-isoband=0.2.2=r40h0357c0b_0
+  - r-jsonlite=1.7.1=r40hcdcec82_0
+  - r-kableextra=1.3.1=r40h142f84f_0
+  - r-kernsmooth=2.23_18=r40h7679c2e_0
   - r-knitr=1.30=r40h6115d3f_0
-  - r-magrittr=2.0.1=r40h9e2df91_1
+  - r-labeling=0.4.2=r40h142f84f_0
+  - r-labelled=2.7.0=r40h6115d3f_0
+  - r-lambda.r=1.2.4=r40h6115d3f_1
+  - r-later=1.1.0.1=r40h0357c0b_0
+  - r-lattice=0.20_41=r40hcdcec82_2
+  - r-lazyeval=0.2.2=r40hcdcec82_2
+  - r-lifecycle=0.2.0=r40h6115d3f_1
+  - r-locfit=1.5_9.4=r40hcdcec82_1
+  - r-lubridate=1.7.9.2=r40he524a50_0
   - r-markdown=1.1=r40hcdcec82_1
+  - r-mass=7.3_53=r40hcdcec82_0
+  - r-matrix=1.2_18=r40h7fa42b6_3
+  - r-matrixstats=0.57.0=r40hcdcec82_0
+  - r-memoise=1.1.0=r40h6115d3f_1004
+  - r-mgcv=1.8_33=r40h7fa42b6_0
   - r-mime=0.9=r40hcdcec82_1
-  - r-rlang=0.4.9=r40hcfec24a_0
+  - r-miniui=0.1.1.1=r40h6115d3f_1002
+  - r-modelr=0.1.8=r40h6115d3f_0
+  - r-munsell=0.5.0=r40h6115d3f_1003
+  - r-nlme=3.1_150=r40h31ca83e_0
+  - r-openssl=1.4.3=r40he5c4762_0
+  - r-pillar=1.4.6=r40h6115d3f_0
+  - r-pkgbuild=1.1.0=r40h6115d3f_0
+  - r-pkgconfig=2.0.3=r40h6115d3f_1
+  - r-pkgload=1.1.0=r40h0357c0b_0
+  - r-plogr=0.2.0=r40h6115d3f_1003
+  - r-plyr=1.8.6=r40h0357c0b_1
+  - r-praise=1.0.0=r40h6115d3f_1004
+  - r-prettyunits=1.1.1=r40h6115d3f_1
+  - r-processx=3.4.4=r40hcdcec82_0
+  - r-progress=1.2.2=r40h6115d3f_2
+  - r-promises=1.1.1=r40h0357c0b_0
+  - r-ps=1.4.0=r40h0eb13af_0
+  - r-purrr=0.3.4=r40hcdcec82_1
+  - r-questionr=0.7.4=r40hc72bb7e_0
+  - r-r.cache=0.14.0=r40h6115d3f_1
+  - r-r.methodss3=1.8.1=r40h6115d3f_0
+  - r-r.oo=1.24.0=r40h6115d3f_0
+  - r-r.utils=2.10.1=r40h6115d3f_0
+  - r-r6=2.5.0=r40hc72bb7e_0
+  - r-rappdirs=0.3.1=r40hcdcec82_1004
+  - r-rcolorbrewer=1.1_2=r40h6115d3f_1003
+  - r-rcpp=1.0.5=r40he524a50_0
+  - r-rcpparmadillo=0.10.1.2.0=r40hfbb317b_0
+  - r-rcurl=1.98_1.2=r40hcdcec82_1
+  - r-readr=1.4.0=r40h1b71b39_0
+  - r-readxl=1.3.1=r40hde08347_4
+  - r-rematch=1.0.1=r40h6115d3f_1003
+  - r-rematch2=2.1.2=r40h6115d3f_1
+  - r-reprex=0.3.0=r40h6115d3f_2
+  - r-reshape2=1.4.4=r40h0357c0b_1
+  - r-rlang=0.4.8=r40h9e2df91_0
   - r-rmarkdown=2.5=r40h142f84f_0
+  - r-rmdformats=1.0.0=r40hc72bb7e_0
+  - r-rprojroot=2.0.2=r40hc72bb7e_0
+  - r-rsqlite=2.2.1=r40h1b71b39_0
+  - r-rstudioapi=0.13=r40hc72bb7e_0
+  - r-rvest=0.3.6=r40h6115d3f_0
+  - r-scales=1.1.1=r40h6115d3f_0
+  - r-selectr=0.4_2=r40h6115d3f_1
+  - r-shiny=1.5.0=r40h6115d3f_0
+  - r-snow=0.4_3=r40h6115d3f_1002
+  - r-sourcetools=0.1.7=r40he1b5a44_1002
+  - r-statmod=1.4.35=r40h6e990d7_1
   - r-stringi=1.5.3=r40h604b29c_0
   - r-stringr=1.4.0=r40h6115d3f_2
+  - r-styler=1.3.2=r40h6115d3f_1
+  - r-survival=3.2_7=r40hcdcec82_0
+  - r-sys=3.4=r40hcdcec82_0
+  - r-testthat=3.0.0=r40he524a50_0
+  - r-tibble=3.0.4=r40h0eb13af_0
+  - r-tidyr=1.1.2=r40h0357c0b_0
+  - r-tidyselect=1.1.0=r40h6115d3f_0
+  - r-tidyverse=1.3.0=r40h6115d3f_2
   - r-tinytex=0.27=r40hc72bb7e_0
+  - r-utf8=1.1.4=r40hcdcec82_1003
+  - r-vctrs=0.3.5=r40h9e2df91_0
+  - r-viridislite=0.3.0=r40h6115d3f_1003
+  - r-waldo=0.2.3=r40hc72bb7e_0
+  - r-webshot=0.5.2=r40h6115d3f_1
+  - r-whisker=0.4=r40h6115d3f_1
+  - r-withr=2.3.0=r40h6115d3f_0
   - r-xfun=0.19=r40h9e2df91_0
+  - r-xml=3.99_0.3=r40hcdcec82_1
+  - r-xml2=1.3.2=r40h0357c0b_1
+  - r-xtable=1.8_4=r40h6115d3f_3
   - r-yaml=2.2.1=r40hcdcec82_1
+  - r-zeallot=0.1.0=r40h6115d3f_1002
   - readline=8.0=he28a2e2_2
   - sed=4.8=he412f7d_0
   - sysroot_linux-64=2.12=h77966d4_13
@@ -100,10 +261,10 @@ dependencies:
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xorg-libxext=1.3.4=h516909a_0
   - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-libxt=1.2.0=h516909a_0
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
+  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h516909a_1010
   - zstd=1.4.5=h6597ccf_2
+prefix: /home/roberto/miniconda3/envs/Renv
