--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -1,4 +1,4 @@
-name: deseq2
+name: deseq2_DE
 channels:
   - conda-forge
   - bioconda
@@ -182,4 +182,3 @@ dependencies:
   - xz=5.2.4
   - zlib=1.2.11
   - zstd=1.4.3
-
