--- a/envs/dexseq_DTU.yaml
+++ b/envs/dexseq_DTU.yaml
@@ -1,4 +1,4 @@
-name: dexseq_dtu_2
+name: dexseq_DTU
 channels:
   - conda-forge
   - bioconda
@@ -222,4 +222,3 @@ dependencies:
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h516909a_1010
   - zstd=1.4.8=ha95c52a_1
-prefix: /home/roberto/miniconda3/envs/dexseq_dtu_2
