--- a/envs/drimseq_DTU.yaml
+++ b/envs/drimseq_DTU.yaml
@@ -8,7 +8,7 @@ dependencies:
   - _openmp_mutex=4.5=1_gnu
   - _r-mutex=1.0.1=anacondar_1
   - binutils_impl_linux-64=2.35.1=h193b22a_2
-  - binutils_linux-64=2.35=hc3fd857_29
+  - binutils_linux-64=2.35=h67ddf6f_30
   - bioconductor-annotationdbi=1.52.0=r40_0
   - bioconductor-biobase=2.50.0=r40h037d062_0
   - bioconductor-biocfilecache=1.14.0=r40_0
@@ -37,44 +37,41 @@ dependencies:
   - bioconductor-zlibbioc=1.36.0=r40h037d062_0
   - bwidget=1.9.14=ha770c72_0
   - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.17.1=h36c2ea0_0
   - ca-certificates=2020.12.5=ha878542_0
   - cairo=1.16.0=h7979940_1007
-  - curl=7.71.1=he644dc0_8
+  - curl=7.71.1=he644dc0_3
   - fontconfig=2.13.1=hba837de_1004
   - freetype=2.10.4=h0708190_1
   - fribidi=1.0.10=h36c2ea0_0
   - gcc_impl_linux-64=9.3.0=h70c0ae5_18
-  - gcc_linux-64=9.3.0=h7247604_29
+  - gcc_linux-64=9.3.0=hf25ea35_30
   - gettext=0.19.8.1=h0b5b191_1005
   - gfortran_impl_linux-64=9.3.0=hc4a2995_18
-  - gfortran_linux-64=9.3.0=ha1c937c_29
+  - gfortran_linux-64=9.3.0=hdc58fab_30
   - graphite2=1.3.13=h58526e2_1001
   - gsl=2.6=he838d99_2
   - gxx_impl_linux-64=9.3.0=hd87eabc_18
-  - gxx_linux-64=9.3.0=h0d07fa4_29
+  - gxx_linux-64=9.3.0=h3fbe746_30
   - harfbuzz=2.7.4=h5cf4720_0
   - icu=68.1=h58526e2_0
   - jpeg=9d=h36c2ea0_0
   - kernel-headers_linux-64=2.6.32=h77966d4_13
   - krb5=1.17.2=h926e7f8_0
   - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.8.0=11_h86c2bf4_netlib
-  - libcblas=3.8.0=11_h86c2bf4_netlib
-  - libcurl=7.71.1=hcdd3856_8
+  - libblas=3.8.0=17_openblas
+  - libcblas=3.8.0=17_openblas
+  - libcurl=7.71.1=hcdd3856_3
   - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
   - libffi=3.3=h58526e2_2
   - libgcc-devel_linux-64=9.3.0=h7864c58_18
   - libgcc-ng=9.3.0=h2828fa1_18
   - libgfortran-ng=9.3.0=hff62375_18
   - libgfortran5=9.3.0=hff62375_18
-  - libglib=2.66.4=h748fe8e_2
+  - libglib=2.66.7=h1f3bc88_0
   - libgomp=9.3.0=h2828fa1_18
   - libiconv=1.16=h516909a_0
-  - liblapack=3.8.0=11_h86c2bf4_netlib
-  - libnghttp2=1.43.0=h812cca2_0
-  - libopenblas=0.3.12=pthreads_h4812303_1
+  - liblapack=3.8.0=17_openblas
+  - libopenblas=0.3.10=pthreads_h4812303_5
   - libpng=1.6.37=h21135ba_2
   - libssh2=1.9.0=hab1572f_5
   - libstdcxx-devel_linux-64=9.3.0=hb016644_18
@@ -87,10 +84,10 @@ dependencies:
   - lz4-c=1.9.3=h9c3ff4c_0
   - make=4.3=hd18ef5c_1
   - ncurses=6.2=h58526e2_4
-  - openssl=1.1.1i=h7f98852_0
+  - openssl=1.1.1j=h7f98852_0
   - pango=1.42.4=h69149e4_5
   - pcre=8.44=he1b5a44_0
-  - pcre2=10.36=h032f7d1_0
+  - pcre2=10.36=h032f7d1_1
   - pixman=0.40.0=h36c2ea0_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - r-askpass=1.1=r40hcdcec82_2
@@ -103,14 +100,14 @@ dependencies:
   - r-bitops=1.0_6=r40hcdcec82_1004
   - r-blob=1.2.1=r40h6115d3f_1
   - r-brio=1.1.1=r40hcfec24a_0
-  - r-cachem=1.0.1=r40hcfec24a_0
+  - r-cachem=1.0.4=r40hcfec24a_0
   - r-callr=3.5.1=r40h142f84f_0
   - r-cli=2.3.0=r40hc72bb7e_0
   - r-colorspace=2.0_0=r40h9e2df91_0
-  - r-crayon=1.4.0=r40hc72bb7e_0
+  - r-crayon=1.4.1=r40hc72bb7e_0
   - r-curl=4.3=r40hcdcec82_1
   - r-dbi=1.1.1=r40hc72bb7e_0
-  - r-dbplyr=2.0.0=r40hc72bb7e_0
+  - r-dbplyr=2.1.0=r40hc72bb7e_0
   - r-desc=1.2.0=r40h6115d3f_1003
   - r-diffobj=0.3.3=r40hcfec24a_0
   - r-digest=0.6.27=r40h1b71b39_0
@@ -134,17 +131,17 @@ dependencies:
   - r-labeling=0.4.2=r40h142f84f_0
   - r-lambda.r=1.2.4=r40h6115d3f_1
   - r-lattice=0.20_41=r40hcfec24a_3
-  - r-lifecycle=0.2.0=r40h6115d3f_1
+  - r-lifecycle=1.0.0=r40hc72bb7e_0
   - r-locfit=1.5_9.4=r40hcdcec82_1
   - r-magrittr=2.0.1=r40hcfec24a_1
-  - r-mass=7.3_53=r40hcfec24a_0
+  - r-mass=7.3_53.1=r40hcfec24a_0
   - r-matrix=1.3_2=r40he454529_0
   - r-matrixstats=0.58.0=r40hcfec24a_0
   - r-memoise=2.0.0=r40hc72bb7e_0
-  - r-mgcv=1.8_33=r40h7fa42b6_0
-  - r-mime=0.9=r40hcfec24a_1
+  - r-mgcv=1.8_34=r40he454529_0
+  - r-mime=0.10=r40hcfec24a_0
   - r-munsell=0.5.0=r40h6115d3f_1003
-  - r-nlme=3.1_151=r40h859d828_0
+  - r-nlme=3.1_152=r40h859d828_0
   - r-openssl=1.4.3=r40he5c4762_0
   - r-pillar=1.4.7=r40hc72bb7e_0
   - r-pkgbuild=1.2.0=r40hc72bb7e_0
@@ -174,13 +171,13 @@ dependencies:
   - r-stringi=1.5.3=r40hcabe038_1
   - r-stringr=1.4.0=r40h6115d3f_2
   - r-sys=3.4=r40hcdcec82_0
-  - r-testthat=3.0.1=r40h03ef668_0
+  - r-testthat=3.0.2=r40h03ef668_0
   - r-tibble=3.0.6=r40hcfec24a_0
   - r-tidyselect=1.1.0=r40h6115d3f_0
   - r-utf8=1.1.4=r40hcdcec82_1003
   - r-vctrs=0.3.6=r40hcfec24a_0
   - r-viridislite=0.3.0=r40h6115d3f_1003
-  - r-waldo=0.2.3=r40hc72bb7e_0
+  - r-waldo=0.2.4=r40hc72bb7e_0
   - r-withr=2.4.1=r40hc72bb7e_0
   - r-xml=3.99_0.5=r40hcfec24a_0
   - r-xml2=1.3.2=r40h0357c0b_1
