--- a/envs/edger_DAS.yaml
+++ b/envs/edger_DAS.yaml
@@ -1,4 +1,4 @@
-name: edger
+name: edger_DAS
 channels:
   - conda-forge
   - bioconda
@@ -127,4 +127,3 @@ dependencies:
   - xz=5.2.4=h14c3975_1001
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.4=h3b9ef0a_1
-prefix: /home/roberto/miniconda3/envs/edger
