--- a/envs/edger_DE.yaml
+++ b/envs/edger_DE.yaml
@@ -1,9 +1,8 @@
-name: edger
+name: edger_DE
 channels:
-  - conda-forge
   - bioconda
+  - conda-forge
   - defaults
-  - r
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
@@ -207,4 +206,3 @@ dependencies:
   - xz=5.2.5
   - zlib=1.2.11
   - zstd=1.4.9
-prefix: /home/fall/anaconda3/envs/edger
