scribo.yaml fix

--- a/envs/scribo.yaml
+++ b/envs/scribo.yaml
@@ -7,41 +7,38 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - bamtools=2.5.1
   - bzip2=1.0.8
   - c-ares=1.17.1
   - ca-certificates=2021.5.30
-  - certifi=2020.6.20
-  - gsl=2.6
+  - certifi=2021.5.30
   - htslib=1.12
   - krb5=1.19.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
+  - ld_impl_linux-64=2.35.1
   - libcurl=7.77.0
   - libdeflate=1.7
   - libedit=3.1.20210216
   - libev=4.33
   - libffi=3.3
   - libgcc-ng=9.3.0
-  - libgfortran-ng=7.5.0
-  - libgfortran4=7.5.0
   - libgomp=9.3.0
   - libnghttp2=1.43.0
-  - libopenblas=0.3.12
   - libssh2=1.9.0
   - libstdcxx-ng=9.3.0
   - ncurses=6.2
   - openssl=1.1.1k
-  - pip=20.1.1
-  - piranha=1.2.1
+  - pip=21.1.2
+  - pyfaidx=0.5.9.5
   - pysam=0.16.0.1
-  - python=2.7.18
-  - python_abi=2.7
-  - readline=8.0
+  - python=3.9.5
+  - python_abi=3.9
+  - readline=8.1
   - samtools=1.12
-  - setuptools=44.0.0
-  - sqlite=3.33.0
+  - setuptools=52.0.0
+  - six=1.16.0
+  - sqlite=3.35.5
   - tk=8.6.10
+  - tzdata=2021a
   - wheel=0.36.2
   - xz=5.2.5
   - zlib=1.2.11
+
