--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,14 @@ select = B,C,E,F,W,T4
 [tool:pytest]
 testpaths=test
 
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = NextSnakes/_version.py
+versionfile_build = NextSnakes/_version.py
+tag_prefix =
+parentdir_prefix = NextSnakes-
+
 [report]
 exclude_lines =
     # Have to re-enable the standard pragma
