--- a/envs/hisat2.yaml
+++ b/envs/hisat2.yaml
@@ -22,6 +22,7 @@ dependencies:
   - python=3.9.0
   - python_abi=3.9
   - readline=8.0
+  - rename=1.601  
   - setuptools=50.3.1
   - sqlite=3.33.0
   - tk=8.6.10
