rename to MONSDA

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,10 @@ testpaths=test
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = NextSnakes/_version.py
-versionfile_build = NextSnakes/_version.py
+versionfile_source = MONSDA/_version.py
+versionfile_build = MONSDA/_version.py
 tag_prefix = v
-parentdir_prefix = NextSnakes-
+parentdir_prefix = MONSDA-
 
 [report]
 exclude_lines =
