working on bioconda recipe and tutorial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,10 @@
     "restructuredtext.linter.run": "onSave",
     "restructuredtext.linter.doc8.extraArgs": [
         "--ignore D001"
-    ]    
+    ],
+    "cSpell.words": [
+        "DEDUP",
+        "MAXTHREADS",
+        "subdir"
+    ]
 }
