rtd for version 1 done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,10 @@
         "--ignore D001"
     ],
     "cSpell.words": [
+        "COMPARABLES",
         "DEDUP",
         "MAXTHREADS",
-        "subdir"
+        "subdir",
+        "unstranded"
     ]
 }
