--- a/envs/diego_DAS.yaml
+++ b/envs/diego_DAS.yaml
@@ -1,58 +1,140 @@
-name: diego_DAS
+name: diego
 channels:
-  - anaconda
-  - bioconda
   - conda-forge
+  - bioconda
   - defaults
+  - r
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - bedtools=2.29.2
-  - blas=1.0
+  - atk-1.0=2.36.0
+  - bedtools=2.30.0
+  - blas=2.114
+  - blas-devel=3.9.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2020.10.14
-  - certifi=2020.6.20
-  - curl=7.69.1
-  - cycler=0.10.0
+  - c-ares=1.18.1
+  - ca-certificates=2022.3.29
+  - cairo=1.16.0
+  - certifi=2021.10.8
+  - curl=7.82.0
+  - cycler=0.11.0
   - diego=0.1.2
-  - freetype=2.10.1
-  - htslib=1.9
-  - icu=64.2
-  - kiwisolver=1.2.0
-  - krb5=1.17.1
-  - ld_impl_linux-64=2.34
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libcurl=7.69.1
-  - libdeflate=1.5
-  - libedit=3.1.20170329
-  - libffi=3.2.1
-  - libgcc-ng=9.2.0
-  - libgfortran-ng=7.3.0
-  - liblapack=3.8.0
-  - libopenblas=0.3.9
+  - expat=2.4.8
+  - fftw=3.3.10
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.33.1
+  - freetype=2.11.0
+  - fribidi=1.0.10
+  - gdk-pixbuf=2.42.6
+  - gettext=0.21.0
+  - ghostscript=9.54.0
+  - giflib=5.2.1
+  - graphite2=1.3.14
+  - graphviz=2.49.1
+  - gtk2=2.24.33
+  - gts=0.7.6
+  - harfbuzz=3.0.0
+  - htslib=1.15.1
+  - icu=68.2
+  - imagemagick=7.1.0_10
+  - intel-openmp=2022.0.1
+  - jbig=2.1
+  - jpeg=9e
+  - keyutils=1.6.1
+  - kiwisolver=1.4.2
+  - krb5=1.19.3
+  - lcms2=2.12
+  - ld_impl_linux-64=2.36.1
+  - lerc=3.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libcurl=7.82.0
+  - libdeflate=1.10
+  - libedit=3.1.20210910
+  - libev=4.33
+  - libffi=3.3
+  - libgcc=7.2.0
+  - libgcc-ng=11.2.0
+  - libgd=2.3.3
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libglib=2.68.4
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - liblapacke=3.9.0
+  - libnghttp2=1.47.0
+  - libnsl=2.0.0
+  - libopenblas=0.3.20
   - libpng=1.6.37
-  - libssh2=1.8.2
-  - libstdcxx-ng=9.2.0
-  - llvm-openmp=10.0.0
-  - matplotlib-base=3.2.1
-  - ncurses=6.1
-  - numpy=1.18.1
-  - openssl=1.1.1h
-  - perl=5.26.2
-  - pip=20.0.2
-  - pyparsing=2.4.7
+  - librsvg=2.52.2
+  - libssh2=1.10.0
+  - libstdcxx-ng=11.2.0
+  - libtiff=4.3.0
+  - libtool=2.4.6
+  - libuuid=2.32.1
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
+  - libxcb=1.13
+  - libxml2=2.9.12
+  - libzlib=1.2.11
+  - llvm-openmp=13.0.1
+  - lz4-c=1.9.3
+  - matplotlib-base=3.5.1
+  - mkl=2022.0.1
+  - munkres=1.1.4
+  - ncurses=6.3
+  - numpy=1.22.3
+  - openblas=0.3.20
+  - openjpeg=2.4.0
+  - openssl=1.1.1n
+  - packaging=21.3
+  - pango=1.48.10
+  - pcre=8.45
+  - perl=5.32.1
+  - pillow=9.1.0
+  - pip=22.0.4
+  - pixman=0.40.0
+  - pkg-config=0.29.2
+  - pthread-stubs=0.4
+  - pyparsing=3.0.8
   - python=3.8.2
-  - python-dateutil=2.8.1
+  - python-dateutil=2.8.2
   - python_abi=3.8
-  - readline=8.0
-  - samtools=1.9
-  - scipy=1.5.2
-  - setuptools=46.1.3
-  - six=1.14.0
-  - sqlite=3.30.1
-  - tk=8.6.10
-  - tornado=6.0.4
-  - wheel=0.34.2
+  - readline=8.1.2
+  - samtools=1.15.1
+  - scipy=1.8.0
+  - setuptools=62.1.0
+  - six=1.16.0
+  - sqlite=3.38.2
+  - tbb=2021.5.0
+  - tk=8.6.12
+  - tornado=6.1
+  - unicodedata2=14.0.0
+  - wheel=0.37.1
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.7.2
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.1
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
   - xz=5.2.5
   - zlib=1.2.11
+  - zstd=1.5.2
+prefix: /home/fall/anaconda3/envs/diego
