--- a/envs/sra.yaml
+++ b/envs/sra.yaml
@@ -1,4 +1,4 @@
-name: sra
+name: sratools
 channels:
   - conda-forge
   - bioconda
@@ -7,38 +7,63 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - hdf5=1.10.5
-  - icu=64.2
-  - libgcc-ng=9.2.0
-  - libgfortran-ng=7.3.0
-  - libgomp=9.2.0
-  - libiconv=1.15
-  - libstdcxx-ng=9.2.0
-  - libxml2=2.9.10
-  - ncbi-ngs-sdk=2.10.4
-  - perl=5.26.2
-  - perl-app-cpanminus=1.7044
-  - perl-business-isbn=3.004
-  - perl-business-isbn-data=20140910.003
-  - perl-carp=1.38
+  - c-ares=1.18.1
+  - ca-certificates=2022.3.29
+  - curl=7.82.0
+  - hdf5=1.10.6
+  - icu=70.1
+  - keyutils=1.6.1
+  - krb5=1.19.3
+  - libcurl=7.82.0
+  - libedit=3.1.20210910
+  - libev=4.33
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libgomp=11.2.0
+  - libiconv=1.16
+  - libnghttp2=1.47.0
+  - libnsl=2.0.0
+  - libssh2=1.10.0
+  - libstdcxx-ng=11.2.0
+  - libxml2=2.9.13
+  - libzlib=1.2.11
+  - ncbi-ngs-sdk=2.11.2
+  - ncurses=6.3
+  - openssl=1.1.1n
+  - ossuuid=1.6.2
+  - perl=5.32.1
+  - perl-alien-build=2.48
+  - perl-alien-libxml2=0.17
+  - perl-business-isbn=3.007
+  - perl-business-isbn-data=20210112.006
+  - perl-capture-tiny=0.48
+  - perl-carp=1.50
   - perl-constant=1.33
-  - perl-data-dumper=2.173
-  - perl-encode=2.88
-  - perl-exporter=5.72
-  - perl-extutils-makemaker=7.36
-  - perl-file-path=2.16
+  - perl-data-dumper=2.183
+  - perl-encode=3.17
+  - perl-exporter=5.74
+  - perl-extutils-makemaker=7.64
+  - perl-ffi-checklib=0.28
+  - perl-file-chdir=0.1010
+  - perl-file-path=2.18
   - perl-file-temp=0.2304
-  - perl-mime-base64=3.15
-  - perl-parent=0.236
-  - perl-uri=1.76
-  - perl-xml-libxml=2.0132
+  - perl-file-which=1.24
+  - perl-importer=0.026
+  - perl-mime-base64=3.16
+  - perl-parent=0.238
+  - perl-path-tiny=0.122
+  - perl-pathtools=3.75
+  - perl-scope-guard=0.21
+  - perl-sub-info=0.002
+  - perl-term-table=0.016
+  - perl-test2-suite=0.000145
+  - perl-threaded=5.32.1
+  - perl-uri=5.10
+  - perl-xml-libxml=2.0207
   - perl-xml-namespacesupport=1.12
   - perl-xml-sax=1.02
   - perl-xml-sax-base=1.09
-  - perl-xsloader=0.24
-  - pigz=2.3.4
-  - rename=1.601
-  - sra-tools=2.10.3
-  - xz=5.2.4
+  - sra-tools=2.11.0
+  - xz=5.2.5
   - zlib=1.2.11
-
