salmon env update

--- a/envs/salmon.yaml
+++ b/envs/salmon.yaml
@@ -9,14 +9,16 @@ dependencies:
   - _openmp_mutex=4.5
   - boost-cpp=1.74.0
   - bzip2=1.0.8
-  - icu=68.1
+  - icu=69.1
   - jemalloc=5.2.1
-  - libgcc-ng=9.3.0
-  - libgomp=9.3.0
-  - libstdcxx-ng=9.3.0
+  - libgcc-ng=12.1.0
+  - libgomp=12.1.0
+  - libjemalloc=5.2.1
+  - libstdcxx-ng=12.1.0
+  - libzlib=1.2.12
   - lz4-c=1.9.3
-  - salmon=1.5.1
-  - tbb=2020.3
-  - xz=5.2.5
-  - zlib=1.2.11
-  - zstd=1.5.0
+  - salmon=1.9.0
+  - tbb=2021.5.0
+  - xz=5.2.6
+  - zlib=1.2.12
+  - zstd=1.5.2
