nextflow profile update

--- a/profile_nextflow/nextflow.config
+++ b/profile_nextflow/nextflow.config
@@ -1,17 +1,14 @@
 profiles {
-    local {
-        process.executor = 'local'
+  slurm {
+    process.executor = 'slurm'
+    process.memory = '10 GB'
+    process.queue = 'main'
+    withName: '_idx|_map' {
+      memory = '200GB'
     }
+  }
 
-    slurm {
-        process.executor = 'slurm'
-        process.queue = 'main'
-        process.memory = '10GB'
-    }
-}
-
-process {
-  withName: '_idx|_map':{
-    memory = '200GB'
+  local {
+    process.executor = 'local'
   }
 }
