--- a/envs/hisat2.yaml
+++ b/envs/hisat2.yaml
@@ -23,6 +23,7 @@ dependencies:
   - python_abi=3.9
   - readline=8.0
   - rename=1.601  
+  - samtools=1.9
   - setuptools=50.3.1
   - sqlite=3.33.0
   - tk=8.6.10
