--- a/envs/countreads.yaml
+++ b/envs/countreads.yaml
@@ -15,6 +15,6 @@ dependencies:
   - pysam=0.19.1
   - python-dateutil=2.8.1
   - readline=8.2
-  - samtools=1.16.1
+  - samtools=1.16.1=h6899075_1
   - simplejson=3.17.0
   - subread=1.6.4
