--- a/envs/segemehl.yaml
+++ b/envs/segemehl.yaml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - samtools=1.16.1
+  - samtools=1.16.1=h6899075_1
   - segemehl=0.2.0
   - grep=2.14
   - pigz=2.6
