--- a/envs/base.yaml
+++ b/envs/base.yaml
@@ -7,8 +7,8 @@ dependencies:
   - grep=3.4
   - picard=2.27.4
   - pyfaidx=0.5.9
-  - pysam=0.19.1
-  - samtools=1.16.1=h6899075_1
+  - pysam=0.20.0
+  - samtools=1.16.1
   - snakemake-minimal=7.18.2
   - natsort=8.1.0
   - perl=5.26.2
