--- a/envs/scyphy.yaml
+++ b/envs/scyphy.yaml
@@ -8,6 +8,6 @@ dependencies:
   - bzip2=1.0.8
   - piranha=1.2.1
   - pyfaidx=0.7.1
-  - pysam=0.19.0
+  - pysam=0.20.0
   - readline=8.2
-  - samtools=1.16.1=h6899075_1
+  - samtools=1.16.1
