--- a/envs/macs.yaml
+++ b/envs/macs.yaml
@@ -9,5 +9,5 @@ dependencies:
   - numpy=1.20.2
   - r-base=4.0.3
   - readline=8.2
-  - samtools=1.16.1=h6899075_1
+  - samtools=1.16.1
   - sed=4.8
