--- a/envs/diego_DAS.yaml
+++ b/envs/diego_DAS.yaml
@@ -13,6 +13,7 @@ dependencies:
   - numpy=1.22.3
   - perl=5.32.1
   - python-dateutil=2.8.2
+  - pysam=0.20.0
   - readline=8.2
-  - samtools=1.16.1=h6899075_1
+  - samtools=1.16.1
   - scipy=1.8.0
